overwrite for same name downloads

--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,9 @@
   "permissions": [
    "activeTab",
    "downloads"
-   ]
+  ],
+  "background": {
+     "scripts": ["background.js"],
+     "persistent": false
+  }
 }
