trying state storage

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   },
   "permissions": [
    "activeTab",
-   "downloads"
+   "downloads",
+   "storage"
   ],
   "background": {
      "scripts": ["background.js"],
